<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/top_info"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight=".32"
            android:background="#ff000000"
            android:focusableInTouchMode="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mw_board_icon"
                android:layout_width="64dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:focusableInTouchMode="false"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:src="@drawable/board" />


            <TextView
                android:id="@+id/meta_wear_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_toEndOf="@id/mw_board_icon"
                android:paddingLeft="9dp"
                android:paddingTop="14dp"
                android:text="@string/metawear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meta_wear_title"
                android:layout_toEndOf="@+id/mw_board_icon"
                android:fontFamily="sans-serif-thin"
                android:paddingLeft="9dp"
                android:paddingTop="2dp"
                android:text="@string/no_metawear_connected"
                android:textColor="#ffffffff" />

            <Switch
                android:id="@+id/demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                android:fontFamily="sans-serif-thin"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:text="@string/demo"
                android:textColor="#ffffffff"
                android:textStyle="italic" />

            <ProgressBar
                android:id="@+id/download_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/temperature_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/download_progress"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-bold"
                android:gravity="center_horizontal"
                android:password="false"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <View
                android:id="@+id/line"
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_below="@+id/temperature_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#686868" />

            <TextView
                android:id="@+id/active_calories_burned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:password="false"
                android:text="@string/active_calories_burned"
                android:textAlignment="center"
                android:textColor="#ffffffff"
                android:textStyle="normal" />

        </RelativeLayout>

        <fragment
            android:id="@+id/graph"
            android:name="com.mbientlab.temperatureTracker.GraphFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight=".51"
            tools:layout="@layout/fragment_graph" />

        <TextView
            android:id="@+id/reading_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_weight=".02"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-light"
            android:password="false"
            android:text=""
            android:textColor="#ffffffff"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".02"
            android:orientation="vertical">
            <View
                android:id="@+id/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/samples"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#ffffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_weight=".14"
            android:layout_height="0dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-bold"
            android:gravity="center_horizontal"
            android:password="false"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="#ffffffff"
            android:textSize="24pt"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
